# pic-pay-challenge

./: .env  Cargo.toml  Dockerfile  docker-compose.yml
migrations/2020-05-02-010435_create_users/: up.sql
src/: adapter.rs  config.rs  main.rs  schema.rs
src/controllers/: users.rs
src/diplomat/: db.rs
src/modelata/: mod.rs
src/schemata/: mod.rs
