[package]
name = "pic-pay-challange"
version = "0.1.0"
authors = ["Julia Naomi <jnboeira@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix = "0.9.0"
actix-rt = "1.0.0"
futures = "0.3.4"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
serde_derive = "1.0.106"
chrono = { version = "0.4.10", features = ["serde"] }
diesel = { version = "1.4.4", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
r2d2 = "0.8.8"